Closed Bug 1273520 Opened 8 years ago Closed 8 years ago

Missing renaming of NS_NewRunnable* and task.h includes

Categories

(Firefox OS Graveyard :: General, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox49 fixed)

RESOLVED FIXED
Tracking Status
firefox49 --- fixed

People

(Reporter: gerard-majax, Assigned: gerard-majax)

References

Details

Attachments

(2 files, 4 obsolete files)

current m-c, device build
likely a consequence of bug 1272415 ?
Blocks: 1272415
Blocks: 1268313
Attached file WIP (obsolete) —
Attached file WIP (obsolete) —
Attachment #8753722 - Attachment is obsolete: true
Attached patch build.patch (obsolete) — Splinter Review
Attachment #8753725 - Attachment is obsolete: true
Attached patch build.patch (obsolete) — Splinter Review
Attachment #8753794 - Attachment is obsolete: true
Attached patch build.patchSplinter Review
on top of gecko git 1dd8a84da8056100adadeb4e1fafb4d906d16c0a, finally building completely
Attachment #8753816 - Attachment is obsolete: true
Summary: ../../../gecko/ipc/netd/Netd.cpp:220:60: error: 'NewRunnableFunction' was not declared in this scope → Missing renaming of NS_NewRunnable* and task.h includes
Comment on attachment 8753928 [details]
MozReview Request: Bug 1273520 - NS_NewRunnable* renaming and include task.h r?fabrice

Review request updated; see interdiff: https://reviewboard.mozilla.org/r/53574/diff/1-2/
Attachment #8753928 - Attachment description: MozReview Request: Bug 1273520 - NS_NewRunnable* renaming and include task.h r? → MozReview Request: Bug 1273520 - NS_NewRunnable* renaming and include task.h r?khuey
Attachment #8753928 - Flags: review?(khuey)
Comment on attachment 8753928 [details]
MozReview Request: Bug 1273520 - NS_NewRunnable* renaming and include task.h r?fabrice

Please find a b2g peer to look at this.
Attachment #8753928 - Flags: review?(khuey)
Comment on attachment 8753928 [details]
MozReview Request: Bug 1273520 - NS_NewRunnable* renaming and include task.h r?fabrice

Review request updated; see interdiff: https://reviewboard.mozilla.org/r/53574/diff/2-3/
Attachment #8753928 - Attachment description: MozReview Request: Bug 1273520 - NS_NewRunnable* renaming and include task.h r?khuey → MozReview Request: Bug 1273520 - NS_NewRunnable* renaming and include task.h r?fabrice
Attachment #8753928 - Flags: review?(fabrice)
Comment on attachment 8753928 [details]
MozReview Request: Bug 1273520 - NS_NewRunnable* renaming and include task.h r?fabrice

https://reviewboard.mozilla.org/r/53574/#review50342
Attachment #8753928 - Flags: review?(fabrice) → review+
https://hg.mozilla.org/mozilla-central/rev/b87c95b57992
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: